# TrackPersonalInsights

./: .gitignore  Cargo.toml  README.md  build-linux.sh  build-windows.bat  sample_flashcards.csv  sample_flashcards.json
scripts/: build-macos-installer.sh  install-gnome.sh  install-windows.ps1  uninstall-gnome.sh  uninstall-windows.ps1
src/: main.rs
