[package]
name = "mynotes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mynotes"
path = "main.rs"

[dependencies]
anyhow = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
dirs = "5"
open = "5"
ratatui = "0.26"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tui-textarea = "0.4"
